tests/paczka2/big_fuzzy/47714544.err
Error in line 2: 9EcUAinOX A399 57,0
Error in line 14: F8V0ncnKGB S920 8,1
Error in line 28: rZhTuCzUT S844 85,8
Error in line 35: XauRbfclMH7 A226 17,1
Error in line 39: rZhTuCzUT A399 49,0
Error in line 37: 9EcUAinOX S920 91,1
Error in line 51: S844 A399 21,1
Error in line 56: 9EcUAinO] A226 32,2
Error in line 57: 9EcUAinOX A226 13P,1
Error in line 55: S844 A226 94,4
Error in line 58: S844 S844 68,5
Error in line 53: 9EcUAinOX A399 27,2
Error in line 67: 9EcUAinOX A226 64,9
Error in line 52: rZhTuCzUT S844 73,4
Error in line 85: xEcUAinOX Sx20 16,3
Error in line 87: F8V0ncnKGB S920 45,2
Error in line 68: 9EcUAinOX S920 39,8
Error in line 97: S844 S844 46,4
Error in line 104: 9EcUAinOX A399 88,3
Error in line 113: F8V0ncnKGB A399 280,2
Error in line 123: S844 A226 15,3
Error in line 122: F8V0ncnKGB S920 48,8
Error in line 127: UuaZQw9WN A226 36,2
Error in line 132: XauRbfclMH7 S844 98,4
Error in line 121: hRhWOuruf7o S844 13,5
Error in line 146: 9EcUAinOX S920 5,3
Error in line 149: 9EcUAinOX S844 59,4
Error in line 162: 9EcUAinOX A399 59,7
Error in line 165: hRhWOuruf7o A22  54,2
Error in line 172: 9EcUAinOX A226 28,1
Error in line 190: hRhWOuruf7o S920 51,5
Error in line 185: XauRbfclMH7 A399 77,5
Error in line 203: XauRbfclMH7 S844 44,19
Error in line 201: UuaZQw9WN A226 96,0
Error in line 202: S844 A226 360,2
Error in line 232: 9EcUAinOX A226 2,5
Error in line 228: F8V0ncnKGB A399 99,5
Error in line 233: 9EcUAinOX S844 19,1
Error in line 234: F8V0ncnKGB S844 2,2
Error in line 231: UuaZQw9WN S920 36,3
Error in line 248: 9EcUAinOX S844 71,4
